--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
 
   service-db:
     image: postgres:14.7-alpine
+    user: postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
